fix truncation

--- a/packages/sit-onyx/src/styles/fonts.scss
+++ b/packages/sit-onyx/src/styles/fonts.scss
@@ -24,7 +24,7 @@
   .onyx-truncation {
     &-ellipsis {
       white-space: nowrap;
-      overflow: clip;
+      overflow: hidden;
       text-overflow: ellipsis;
     }
 
